--- a/styles/main.css
+++ b/styles/main.css
@@ -237,6 +237,7 @@ html {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: center 10%;
 }
 
 
@@ -1003,3 +1004,4 @@ html {
         align-items: center;
     }
 }
+
